rubocop/examples/bad/Style_CollectionMethods.rb
# TODO: This cop checks for uses of unidiomatic method
#   names from the Enumerable module.

# TODO: The current definition of the check is flawed and should be enhanced
#   by check for by blocks & procs as arguments of the methods.
